[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/main/ui/menu/splash-screen.gd" type="Script" id=1]
[ext_resource path="res://src/main/ui/VersionLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/main/ui/font/fredoka-one-regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/main/ui/menu/drop-panel.tres" type="StyleBox" id=4]
[ext_resource path="res://src/main/ui/menu/SystemButtons.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/main/ui/settings/SettingsMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/main/ui/candy-button/h3-v.png" type="Texture" id=7]
[ext_resource path="res://src/main/ui/menu/BadSaveDataControl.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/main/ui/menu/MenuAccentTitle.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/main/ui/candy-button/h3-v-pressed.png" type="Texture" id=10]
[ext_resource path="res://src/main/ui/wallpaper/Wallpaper.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/main/ui/candy-button/CandyButtonH3.tscn" type="PackedScene" id=14]

[sub_resource type="DynamicFont" id=1]
size = 72
outline_size = 6
outline_color = Color( 0.254902, 0.156863, 0.117647, 1 )
font_data = ExtResource( 3 )

[node name="SplashScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1024, 600 )
script = ExtResource( 1 )

[node name="Wallpaper" parent="." instance=ExtResource( 11 )]

[node name="DropPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
custom_styles/panel = ExtResource( 4 )

[node name="TurboFat" type="Label" parent="DropPanel"]
anchor_right = 1.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 1 )
text = "turbo fat"
align = 1
valign = 1

[node name="MenuAccentTitle" parent="DropPanel/TurboFat" instance=ExtResource( 9 )]
margin_left = -250.0
margin_top = -75.0
margin_right = 250.0
margin_bottom = 75.0

[node name="PlayHolder" type="CenterContainer" parent="DropPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 150.0
margin_bottom = -100.0

[node name="Play" parent="DropPanel/PlayHolder" instance=ExtResource( 14 )]
margin_left = 362.0
margin_top = 100.0
margin_right = 562.0
margin_bottom = 150.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 7 )
text = "Play"
color = 4
shape = 8

[node name="System" parent="DropPanel" instance=ExtResource( 5 )]
alignment = 1
quit_on_cancel = false

[node name="VersionLabel" parent="." instance=ExtResource( 2 )]

[node name="SettingsMenu" parent="." instance=ExtResource( 6 )]

[node name="BadSaveDataControl" parent="." instance=ExtResource( 8 )]

[connection signal="pressed" from="DropPanel/PlayHolder/Play" to="." method="_on_Play_pressed"]
[connection signal="quit_pressed" from="DropPanel/System" to="." method="_on_System_quit_pressed"]
[connection signal="settings_pressed" from="DropPanel/System" to="SettingsMenu" method="_on_Settings_pressed"]
[connection signal="quit_pressed" from="SettingsMenu" to="DropPanel/System" method="_on_Quit_pressed"]
